--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@ body {
 /* Cursors */
 
 .cursor {
+  mix-blend-mode: difference;
   pointer-events: none;
   position: fixed;
   height: 25px;
@@ -32,7 +33,7 @@ body {
   border-radius: 25px;
   border-width: 2px;
   border-style: solid;
-  border-color: #ffffff77;
+  border-color: #987750;
   z-index: 1000;
   transition-duration: 150ms;
   transition-timing-function: ease-out;
@@ -43,6 +44,7 @@ body {
 }
 
 .point {
+  mix-blend-mode: difference;
   z-index: 1000;
   height: 6px;
   width: 6px;
@@ -50,7 +52,7 @@ body {
   pointer-events: none;
   border-radius: 100px;
   position: fixed;
-  background-color: #ffffff77;
+  background-color: #987750;
   transition: top 50ms ease-out, left 50ms ease-out, height 400ms ease, width 400ms ease, background-color 400ms ease, transform 400ms ease;
 }
 
@@ -58,7 +60,7 @@ body {
 .point.arrow {
   width: 80px;
   height: 80px;
-  background-color: #ffffff11;
+  background-color: #987750;
   transform: translate(-35px, -35px);
 }
 
@@ -67,6 +69,7 @@ body {
   top: 50%;
   opacity: 0;
   left: -35px;
+  mix-blend-mode: difference;
   transition: opacity 0.2s ease;
 }
 
@@ -76,7 +79,7 @@ body {
 
 .point .point-left::before {
   display: block;
-  background-color: #ffffff99;
+  background-color: #987750;
   width: 14px;
   height: 2px;
   content: "";
@@ -89,7 +92,7 @@ body {
 
 .point .point-left::after {
   display: block;
-  background-color: #ffffff99;
+  background-color: #987750;
   width: 14px;
   height: 2px;
   content: "";
@@ -104,6 +107,7 @@ body {
   position: absolute;
   top: 50%;
   opacity: 0;
+  mix-blend-mode: difference;
   right: -35px;
 }
 
@@ -113,7 +117,7 @@ body {
 
 .point .point-right::before {
   display: block;
-  background-color: #ffffff99;
+  background-color: #987750;
   width: 14px;
   height: 2px;
   content: "";
@@ -126,7 +130,7 @@ body {
 
 .point .point-right::after {
   display: block;
-  background-color: #ffffff99;
+  background-color: #987750;
   width: 14px;
   height: 2px;
   content: "";
